# tod-web

./: Cargo.toml  README.md  Shuttle.toml  lcov.info  watch_app.sh
.github/workflows/: ci.yml
scripts/: watch_app.sh
src/: configuration.rs  index.rs  main.rs  usage.rs
templates/: base.css  base.html  base.js  code-block-start.html  code-block-stop.html  configuration.html  index.html  nav.html  usage.html
