[package]
name = "tod-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.140"
shuttle = "0.8.0"
shuttle-runtime = "0.49.0"
shuttle-axum = "0.49.0"
askama_axum = "0.4.0"
askama = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
tower-http = { version = "0.6.2", features = ["trace"] }

[dev-dependencies]
cargo-watch = "8.5.3"
axum-test = "16.4.1"
