[package]
name = "tod-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.140"
shuttle = "0.8.0"
shuttle-runtime = "0.51.0"
shuttle-axum = "0.51.0"
askama_axum = "0.4.0"
askama = "0.12.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
tower-http = { version = "0.6.4", features = ["trace"] }

[dev-dependencies]
cargo-watch = "8.5.3"
axum-test = "17.3.0"
