[package]
name = "tod-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum and Askama
axum = "0.8.3"
askama = "0.14.0"

# Shuttle
shuttle = "0.8.1"
shuttle-runtime = "0.56.0"
shuttle-axum = "0.56.0"

tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
tower-http = { version = "0.6.6", features = ["trace"] }

[dev-dependencies]
cargo-watch = "8.5.3"
axum-test = "17.3.0"

